PR26418 UBSAN: cache.c:386 null pointer fwrite

PR 26418
	* ecofflink.c (WRITE): Don't write size 0 chunks.